devtools/client/themes/toolbars.css
/* ... */
.
devtools
-
tab
>
image
{
border
:
none
;
margin
:
0
;
margin
-
inline
-
start
:
4px
;
opacity
:
0
.
6
;
max
-
height
:
16px
;
width
:
16px
;
}
.
devtools
-
tab
>
label
{
white
-
space
:
nowrap
;
margin
:
0
4px
;
}
.
devtools
-
tab
:
hover
>
image
{
opacity
:
0
.
8
;
}
.
devtools
-
tab
:
active
>
image
.
devtools
-
tab
[
selected
]
>
image
{
opacity
:
1
;
}
.
devtools
-
tabbar
.
devtools
-
tab
[
selected
]
.
devtools
-
tabbar
.
devtools
-
tab
[
selected
]
:
hover
:
active
{
color
:
var
(
-
-
theme
-
selection
-
color
)
;
background
-
color
:
var
(
-
-
theme
-
selection
-
background
)
;
}
.
theme
-
dark
.
devtools
-
tabbar
.
devtools
-
tab
[
selected
]
{
box
-
shadow
:
0
2px
0
#
d7f1ff
inset
0
8px
3px
-
5px
#
2b82bf
inset
0
-
2px
0
rgba
(
0
0
0
.
2
)
inset
;
}
#
toolbox
-
tabs
.
devtools
-
tab
[
selected
]
#
toolbox
-
tabs
.
devtools
-
tab
[
highlighted
]
{
border
-
width
:
0
;
-
moz
-
padding
-
start
:
1px
;
}
#
toolbox
-
tabs
.
devtools
-
tab
[
selected
]
:
last
-
child
#
toolbox
-
tabs
.
devtools
-
tab
[
highlighted
]
:
last
-
child
{
-
moz
-
padding
-
end
:
1px
;
}
#
toolbox
-
tabs
.
devtools
-
tab
[
selected
]
+
.
devtools
-
tab
#
toolbox
-
tabs
.
devtools
-
tab
[
highlighted
]
+
.
devtools
-
tab
{
-
moz
-
border
-
start
-
width
:
0
;
-
moz
-
padding
-
start
:
1px
;
}
#
toolbox
-
tabs
.
devtools
-
tab
:
first
-
child
[
selected
]
{
-
moz
-
border
-
start
-
width
:
0
;
}
#
toolbox
-
tabs
.
devtools
-
tab
:
last
-
child
{
-
moz
-
border
-
end
-
width
:
1px
;
}
.
devtools
-
tab
:
not
(
[
highlighted
]
)
>
.
highlighted
-
icon
.
devtools
-
tab
[
selected
]
>
.
highlighted
-
icon
.
devtools
-
tab
:
not
(
[
selected
]
)
[
highlighted
]
>
.
default
-
icon
{
visibility
:
collapse
;
}
#
toolbox
-
option
-
container
.
devtools
-
tab
:
not
(
[
selected
]
)
{
background
-
color
:
transparent
;
}
#
toolbox
-
option
-
container
.
devtools
-
tab
{
border
-
color
:
transparent
;
border
-
width
:
0
;
-
moz
-
padding
-
start
:
1px
;
}
#
toolbox
-
tab
-
options
>
image
{
margin
:
0
8px
;
}
.
theme
-
light
.
devtools
-
tab
[
icon
-
invertable
]
>
image
.
theme
-
light
#
toolbox
-
dock
-
buttons
>
toolbarbutton
>
image
.
theme
-
light
.
command
-
button
-
invertable
>
image
.
theme
-
light
.
devtools
-
closebutton
>
image
.
theme
-
light
.
devtools
-
toolbarbutton
>
image
.
theme
-
light
.
devtools
-
button
:
:
before
.
theme
-
light
#
breadcrumb
-
separator
-
normal
.
theme
-
light
.
scrollbutton
-
up
>
.
toolbarbutton
-
icon
.
theme
-
light
.
scrollbutton
-
down
>
.
toolbarbutton
-
icon
.
theme
-
light
#
black
-
boxed
-
message
-
button
.
button
-
icon
.
theme
-
light
#
requests
-
menu
-
perf
-
notice
-
button
.
button
-
icon
.
theme
-
light
#
requests
-
menu
-
network
-
summary
-
button
.
button
-
icon
.
theme
-
light
#
toggle
-
breakpoints
[
checked
]
>
image
.
theme
-
light
.
event
-
tooltip
-
debugger
-
icon
{
filter
:
invert
(
1
)
;
}
.
theme
-
light
.
devtools
-
tab
[
icon
-
invertable
]
[
selected
]
>
image
.
theme
-
light
.
devtools
-
tab
[
icon
-
invertable
]
[
highlighted
]
>
image
{
filter
:
none
!
important
;
}
.
theme
-
light
.
command
-
button
:
hover
{
background
-
color
:
inherit
;
}
.
theme
-
light
.
command
-
button
:
hover
:
active
.
theme
-
light
.
command
-
button
[
checked
=
true
]
:
not
(
:
hover
)
{
background
-
color
:
inherit
;
}
.
hidden
-
labels
-
box
:
not
(
.
visible
)
>
label
.
hidden
-
labels
-
box
.
visible
~
.
hidden
-
labels
-
box
>
label
:
last
-
child
{
display
:
none
;
}
.
devtools
-
invisible
-
splitter
{
border
-
color
:
transparent
;
}
.
devtools
-
horizontal
-
splitter
{
border
-
bottom
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
devtools
-
side
-
splitter
{
-
moz
-
border
-
end
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
border
-
color
:
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
devtools
-
throbber
:
:
before
{
content
:
"
"
;
display
:
inline
-
block
;
vertical
-
align
:
bottom
;
-
moz
-
margin
-
end
:
0
.
5em
;
width
:
1em
;
height
:
1em
;
border
:
2px
solid
currentColor
;
border
-
right
-
color
:
transparent
;
border
-
radius
:
50
%
;
animation
:
1
.
1s
linear
throbber
-
spin
infinite
;
}
keyframes
throbber
-
spin
{
from
{
transform
:
none
;
}
to
{
transform
:
rotate
(
360deg
)
;
}
}

