Bug 1258114 - use invisible borders to drag devtools splitters on both sides;r=bgrins
Devtools splitters now have a clickable area on both sides of the splitter.
The previous layout provided a 3px clickable area (2px empty content + 1px
visible border).

The new layout uses invisible borders on both sides and a visible (clipped)
content. New draggable areas:
- side splitters : 1px left + 1px splitter + 4px right
- horizontal splitters : 2 px top + 1px splitter + 2px bottom

Variables are defined in splitters.css to adjust these settings.
Modified two test helpers opening context menus: the click should be
performed with a slight offset in order to avoid clicking on the splitter.

MozReview-Commit-ID: 94uFZoIBL7B

UltraBlame original commit: 4d5b0cdb72fe52f843c61a5df8f6b8ed35758be8

--- a/devtools/client/themes/toolbars.css
+++ b/devtools/client/themes/toolbars.css
@@ -6856,6 +6856,12 @@ color
 :
 transparent
 ;
+background
+-
+color
+:
+transparent
+;
 }
 .
 devtools
@@ -6863,25 +6869,6 @@ devtools
 horizontal
 -
 splitter
-{
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-}
 .
 devtools
 -
@@ -6889,27 +6876,7 @@ side
 -
 splitter
 {
--
-moz
--
-border
--
-end
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-border
+background
 -
 color
 :
